tests/ui/reborrow/coerce-shared-field-lifetime-swap.stderr
error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce-shared-field-lifetime-swap.rs:15:5
   |
LL |     y: &'a (),
   |     --------- source field `y` has type `&'a ()`
...
LL |     y: &'static (),
   |     ^^^^^^^^^^^^^^ target field `y` has type `&'static ()`

error: aborting due to 1 previous error

